# tianci-framework

./: .gitignore  LICENSE  README.md  TC-001_ownership.txt  TianCi_Paradigm_Day44_Operator_Compendium_CN_EN.md  TianCi_Paradigm_Day45_Formula_Compendium_CN_EN.md  Tianci-Molecule-001_ownership.txt  Tianci-Molecule-002_ownership.txt  guardian_anchor.py  guardian_holo.py  guardian_main.py  guardian_pursuit.py  guardian_trace.py  ks_solver.py  mcp_server.py  ns_solver.py  operator_log_257.txt  resource.rc  run_all_tests.py  sync_atomgit.py  test_black_hole.py  test_new.py  test_schumann.py  tianci_GH_v2.py  tianci_HGJJ.py  tianci_HJZL.py  tianci_JZKZ.py  tianci_blackbox.py  tianci_github_tracker.cpp  tianci_github_tracker.py  tianci_new_operators.py  tianci_opt.cpp  tianci_wormhole.py  下雨法.docx  天赐范式算子与公式大全.md
.gitee/workflows/: ci.yml
.github/workflows/: ci.yml  ks_solver.yml  ns_solver.yml
TianciNS-CF/data/: operator_log_258.txt  u_centerline_256.txt
TianciNS-ComputersFluids/: README.md  requirements.txt
TianciNS-ComputersFluids/data/: u_centerline_258.txt
TianciNS-ComputersFluids/tests/: verify_256.py  verify_258.py
TianciNS-JCP/: CMakeLists.txt  LICENSE  README.md
TianciNS-JCP/src/: Tianci_NS80000.cpp  tianci_256.cpp
TianciNS-JCP/tests/: verify_256.py
TianciNS-JOSS/: README.md  paper.bib  paper.md
TianciNS-JOSS/data/: operator_log_256.txt
TianciNS-JOSS/src/: Tianci_NS80000.cpp  tianci_QDXPC.cpp
TianciNS-JSC/: CMakeLists.txt  README.md  run_all.bat
TianciNS-JSC/data/: u_centerline_257.txt
TianciNS-JSC/src/: Tianci_NSDT_Tower_v2.6_JSC.cpp  tianci_257.cpp  tianci_258.cpp
TianciNS-JSC/tests/: verify_257.py
